update controllers to use helper class

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "classmap": [
             "src/controllers",
             "src/migrations",
-			"src/seeds",
+						"src/helpers",
+						"src/seeds",
             "src/models"
         ],
         "psr-0": {
